[project]
name = "paperplots"
version = "0.1.1"
authors = [
  { name="Anish Abhijit Diwan", email="A.A.Diwan@student.tudelft.nl" },
]
description = "Camera ready machine learning plots with a Tensorboard-like API"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/anishhdiwan/paperplots"
Issues = "https://github.com/anishhdiwan/paperplots/issues"